--- a/page1.html
+++ b/page1.html
@@ -5,11 +5,154 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Blog</title>
 </head>
 
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                </li>
+            </ul>
+            <button class="btn btn-outline-light facebook my-2 my-sm-0">FACEBOOK</button>
+            <button class="btn btn-outline-light instagram my-2 my-sm-0 mx-2">INSTAGRAM</button>
+        </div>
+    </nav>
+    <div class="container-fluid my-3">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card text-center mx-auto">
+                    <div>
+                        <img src="https://picsum.photos/id/684/600/400?grayscale" width="100%" alt="portada">
+                    </div>
+                    <div class="mx-auto">
+                        <img src="https://picsum.photos/id/514/600/400" width="130px" height="130px"
+                            class="rounded-circle bg-white p-1 image" alt="avatar">
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title font-weight-bold">Title</h4>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum sit tempora atque
+                            optio sunt voluptatem exercitationem, pariatur provident impedit iste nesciunt voluptas.
+                        </p>
+                        <button class="btn btn-primary">Go Somewhere</button>
+                    </div>
+                </div>
+                <div class="row my-3">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-header">
+                                Quote
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                        ante.
+                                    </p>
+                                    <footer class="blockquote-footer">Someone famous in <cite
+                                            title="Source Title">Source
+                                            Title</cite></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="card px-2 py-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-1 av">
+                            <img src="https://picsum.photos/id/1011/64/64" alt="" class="rounded-circle">
+                        </div>
+                        <div class="col-md-11">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                    velit mollitia sed esse aspernatur nemo. Dolorum voluptas eveniet repellat. Vel
+                                    vitae sunt magnam corporis molestiae reprehenderit natus aliquid sit?
+                                    Necessitatibus?
+                                    <br>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem officiis necessitatibus
+                                    reprehenderit unde! Totam recusandae accusantium vel debitis fugit, ea nulla
+                                    nesciunt qui autem neque id ipsa aspernatur eligendi atque?
+                                </p>
+                                <button class="btn btn-outline-primary">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card px-2 py-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-1 av">
+                            <img src="https://picsum.photos/id/1011/64/64" alt="" class="rounded-circle">
+                        </div>
+                        <div class="col-md-11">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                    velit mollitia sed esse aspernatur nemo. Dolorum voluptas eveniet repellat. Vel
+                                    vitae sunt magnam corporis molestiae reprehenderit natus aliquid sit?
+                                    Necessitatibus?
+                                    <br>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem officiis necessitatibus
+                                    reprehenderit unde! Totam recusandae accusantium vel debitis fugit, ea nulla
+                                    nesciunt qui autem neque id ipsa aspernatur eligendi atque?
+                                </p>
+                                <button class="btn btn-outline-primary">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card px-2 py-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-1 av">
+                            <img src="https://picsum.photos/id/1011/64/64" alt="" class="rounded-circle">
+                        </div>
+                        <div class="col-md-11">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                    velit mollitia sed esse aspernatur nemo. Dolorum voluptas eveniet repellat. Vel
+                                    vitae sunt magnam corporis molestiae reprehenderit natus aliquid sit?
+                                    Necessitatibus?
+                                    <br>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem officiis necessitatibus
+                                    reprehenderit unde! Totam recusandae accusantium vel debitis fugit, ea nulla
+                                    nesciunt qui autem neque id ipsa aspernatur eligendi atque?
+                                </p>
+                                <button class="btn btn-outline-primary">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer bg-dark text-white text-center">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus error consequatur soluta perferendis
+        veritatis aperiam laudantium, nihil laboriosam iste sit! Blanditiis quos error soluta totam possimus? Nesciunt
+        doloribus iusto praesentium!
+    </footer>
+    <script src="lib/bootstrap/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="lib/bootstrap/js/popper.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
